--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,21 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.1.0</version>
+      <version>5.3.2</version>
       <scope>test</scope>
     </dependency>
+     <dependency>
+     <groupId>org.junit.jupiter</groupId>
+     <artifactId>junit-jupiter-engine</artifactId>
+     <version>5.3.2</version>
+     <scope>test</scope>
+   </dependency>
+   <dependency>
+    <groupId>org.junit.platform</groupId>
+    <artifactId>junit-platform-launcher</artifactId>
+    <version>1.3.2</version>
+    <scope>test</scope>
+	</dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
