--- a/pom.xml
+++ b/pom.xml
@@ -14,24 +14,33 @@
       <version>5.3.2</version>
       <scope>test</scope>
     </dependency>
-     <dependency>
-     <groupId>org.junit.jupiter</groupId>
-     <artifactId>junit-jupiter-engine</artifactId>
-     <version>5.3.2</version>
-     <scope>test</scope>
-   </dependency>
-   <dependency>
-    <groupId>org.junit.platform</groupId>
-    <artifactId>junit-platform-launcher</artifactId>
-    <version>1.3.2</version>
-    <scope>test</scope>
-	</dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.3.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
+      <version>1.3.2</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
       <version>3.14.0</version>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-remote-driver</artifactId>
+      <version>3.14.0</version>
+    </dependency>   
+    <dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-api</artifactId>
+	    <version>3.14.0</version>
+	  </dependency> 
   </dependencies>
 </project>
