--- a/pom.xml
+++ b/pom.xml
@@ -7,40 +7,46 @@
   <version>1.0-SNAPSHOT</version>
   <name>poc-fe-selenium</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+  	<junit.version>5.5.0</junit.version>
+  	<selenium.version>3.14.0</selenium.version>
+  </properties>
+  
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.3.2</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.3.2</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.platform</groupId>
       <artifactId>junit-platform-launcher</artifactId>
-      <version>1.3.2</version>
+      <version>1.5.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>3.14.0</version>
+      <version>${selenium.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-remote-driver</artifactId>
-      <version>3.14.0</version>
+      <version>${selenium.version}</version>
     </dependency>   
     <dependency>
 	    <groupId>org.seleniumhq.selenium</groupId>
 	    <artifactId>selenium-api</artifactId>
-	    <version>3.14.0</version>
+	    <version>${selenium.version}</version>
 	  </dependency> 
   </dependencies>
 </project>
